--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,6 @@ sortedcontainers==2.4.0
 tomli==2.0.1
 trio==0.19.0
 trio-websocket==0.9.2
-typing_extensions==4.0.1
+typing-extensions==4.0.1
 urllib3==1.26.8
 wsproto==1.0.0
